# aiogram-3-guide

./: .gitignore  .gitlab-ci.yml  404.html  LICENSE  README.en.md  README.md  README.uz.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
advanced-teaser/: index.html
blog/: index.html
book/: index.html
book_src/: 01_quickstart.md  03_buttons.md  04_fsm.md  advanced-teaser.md  book.md  buttons.md  filters-and-middlewares.md  fsm.md  guest-bots.md  index.md  inline-mode.md  inline_mode.md  lesson_01.md  lesson_02.md  lesson_03.md  messages.md  payments.md  (+3 more)
code/04_routers/: README.md  bot.py  config_reader.py  pyproject.toml  requirements.txt
code/04_routers/handlers/: different_types.py  questions.py
code/05_filters_and_middlewares/: README.md  bot.py  env_dist  pyproject.toml  requirements.txt
code/05_filters_and_middlewares/filters/: chat_type.py  find_usernames.py
code/05_filters_and_middlewares/handlers/: checkin.py  group_games.py  usernames.py
code/05_filters_and_middlewares/keyboards/: checkin.py
code/project_threads_llm/final_version/: Dockerfile  docker-compose.yml  pyproject.toml  settings.example.toml
code/project_threads_llm/final_version/models/: README.md
code/project_threads_llm/final_version/src/bot/: __main__.py  callback_factories.py  config_reader.py  keyboards.py  llm.py  prompts.py  states.py  storage.py  text_utils.py
code/project_threads_llm/final_version/src/bot/handlers/: __init__.py  chat_in_general_topic.py  chat_in_topic.py  commands_in_topic.py  in_topic_persona_choose.py  new_chat_creation.py  start.py
(+221 files in other folders)
