[tool.poetry]
name = "04_routers"
version = "1.0.0"
description = "Chapter 4. Routers, splitting code into files"
authors = ["Groosha"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "3.0.0b2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
