[tool.poetry]
name = "05_filters_and_middlewares"
version = "1.0.0"
description = "Chapter 5. Filters and middlewares"
authors = ["Groosha"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "3.0.0b2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
