[build-system]
requires = ["uv_build == 0.10.4"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[project]
name = "llm-to-tg-final-version"
version = "1.0.0"
description = "Simple bot with LLM"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]
